--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to jokopi Rest API!</title>
+    <title>Welcome to coffeeup Rest API!</title>
 </head>
 <style>
     body {
         font-family: monospace;
         font-weight: 700;
         font-size: x-large;
-        color: #FFE19C;
+        color: #ffe19c;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -23,7 +23,7 @@
     }
 </style>
 <body>
-    Welcome to jokopi Rest API<br>
+    Welcome to coffeeup Rest API<br>
     read documentation for more! :)
 </body>
 </html>
